Fix bad tag on sensor readings table heading.

--- a/devdata/index.html
+++ b/devdata/index.html
@@ -20,7 +20,7 @@
         <table class="table" style="background-color: white">
             <thead class="thead-light">
                 <tr>
-                    <td id="ReadingsTitle">Sensor readings</th>
+                    <th id="ReadingsTitle">Sensor readings</th>
                 </tr>
             </thead>
             <tbody>
